kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gatherspace
  labels:
    name: gatherspace
