kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: gatherspace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: ahsanfaraz1/gatherspace-server:latest
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.2"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: gatherspace
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: server
