kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: gatherspace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: ahsanfaraz/gatherspace-client:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.3"
              memory: "256Mi"
            requests:
              cpu: "0.1"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: gatherspace
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: client
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatherspace-ingress
  namespace: gatherspace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 8000
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
